# next/src/server/modules/location/location.schemas.ts
@@ -1,0 +1,8 @@
+import * as z from "zod";
+
+export const ProvinceIdParamSchema = z.object({
+  provinceId: z.coerce
+    .bigint()
+    .positive()
+    .transform((value) => value as bigint),
+}).strict();
